# OpenDXF

./: CMakeLists.txt  README.md
src/: interface.cpp  interface.h  main.cpp  opendxf.cpp  opendxf.h
